kconfig/wiremock-ingress/65-wiremock-kube-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiremock-demo-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: wiremock-node.wiremock-demo.svc.cluster.local
  ports:
  - port: 8888
    targetPort: 8888

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiremock-demo-ingress
  namespace: ingress-nginx
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: HTTP
    # nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
    # nginx.ingress.kubernetes.io/client-header-buffer-size: 1k
    # nginx.ingress.kubernetes.io/http2-max-header-size: 96k
    # nginx.ingress.kubernetes.io/large-client-header-buffers: 4 100k
    # nginx.ingress.kubernetes.io/load-balance: ewma
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    # nginx.ingress.kubernetes.io/proxy-buffer-size: 96k
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "15"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy_next_upstream: "error timeout http_429"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "3"
    # setting to > 10 allows two failed connect attempts to be made (in case of pod recycling)
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "12"
    # nginx.ingress.kubernetes.io/server-snippet: |
    #   client_header_buffer_size 1k;
    #   large_client_header_buffers 4 16k;
spec:
  ingressClassName: nginx
  rules:
  - host: wiremock-demo.kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiremock-demo-external
            # namespace: wiremock-demo
            port:
              number: 8888
